# open-gl-test

./: .clang-format  CMakeLists.txt  Makefile  README.md  main.cpp
OpenGLTest/: main.cpp
OpenGLTest/inc/: display.hpp  mouse.hpp
doc/: draw.md  opengl.md  setup.md  vao.md
inc/: display.hpp  initialize.hpp  keyboard.hpp  motion.hpp  mouse.hpp  passive_motion.hpp  resize.hpp
lib/: CMakeLists.txt
lib/callback/: CMakeLists.txt
lib/callback/cpp/: display.cpp  initialize.cpp  keyboard.cpp  motion.cpp  mouse.cpp  mouse_normalize.cpp  passive_motion.cpp  resize.cpp
lib/callback/hpp/: display.hpp  initialize.hpp  keyboard.hpp  motion.hpp  mouse.hpp  mouse_normalize.hpp  passive_motion.hpp  resize.hpp
lib/cursor/: CMakeLists.txt
lib/instance/: CMakeLists.txt
lib/instance/cpp/: instance.cpp
lib/instance/hpp/: instance.hpp
lib/line/: CMakeLists.txt
lib/line/cpp/: line.cpp
lib/line/hpp/: line.hpp  point.hpp
lib/logic/: CMakeLists.txt
lib/logic/cpp/: logic.cpp
lib/logic/hpp/: logic.hpp
lib/object/: CMakeLists.txt
lib/object/cpp/: line.cpp  lines.cpp
lib/object/hpp/: line.hpp  lines.hpp
lib/ui/: CMakeLists.txt
lib/ui/cpp/: display.cpp  initialize.cpp  keyboard.cpp  motion.cpp  mouse.cpp  passive_motion.cpp  resize.cpp
lib/ui/hpp/: display.hpp  initialize.hpp  keyboard.hpp  motion.hpp  mouse.hpp  passive_motion.hpp  resize.hpp
